napoli_client/napoli.metaq/src/main/java/com/alibaba/napoli/metamorphosis/filter/FilterParser.java
/* Generated By:JavaCC: Do not edit this line. FilterParser.java */
package com.alibaba.napoli.metamorphosis.filter;

import java.io.StringReader;

import java.util.HashSet;
import java.util.Map;
import java.util.Set;

/**
 * A JavaCC 2.0 grammar for HornetQ filters
 *
 * @author Scott.Stark@jboss.org
 * @author adrian@jboss.org
 * @version $Revision: 179889 $
 */
public class FilterParser implements FilterParserConstants {private static final String LOFFER_L = "l";
private static final String UPPER_L = "L";
private static final String OX = "0X";
private static final String Ox = "0x";
private static final String ZERRO = "0";

private Map identifierMap;

public FilterParser()
{
   // keep the parser from freaking out, init using one of
   // the JavaCC generated constructor
   this(new StringReader(""));
}

public Object parse(SimpleString selector, Map identifierMap)
   throws ParseException
{
   return parse(selector, identifierMap, false);
}

public Object parse(SimpleString selector, Map identifierMap, boolean trace)
   throws ParseException
{
   SimpleStringReader sr = new SimpleStringReader(selector);
   ReInit(sr);

   // This will have no effect unless the debugging options are true      
   if (trace)
   {
      this.enable_tracing();
   }
   else
   {
      this.disable_tracing();
   }

   this.identifierMap = identifierMap;
   return this.expression();
}

/**
 * Strip off the leading and trailing (quote) chars from the given string
 * and return it. 
 */
private SimpleString stripQuotes(String image)
{
   StringBuffer result = new StringBuffer(image.length()-2);
   int i = 1;
   boolean escaped = false;
   while (i < image.length() - 1)
   {
      if (escaped)
      {
         if (image.charAt(i) == '\'')
            result.append('\'');
         else
            throw new RuntimeException("Invalid uses of quotes: " + image);
         escaped = false;
      }
      else if (image.charAt(i) == '\'')
         escaped = true;
      else
         result.append(image.charAt(i));
      ++i;
   }
   return new SimpleString(result.toString());
}

public static Object doParse(SimpleString selector, Map identifierMap)
   throws ParseException
{
   return doParse(selector, identifierMap, false);
}

public static Object doParse(SimpleString selector, Map identifierMap, boolean trace)
   throws ParseException
{
   FilterParser parser = new FilterParser();
   return parser.parse(selector, identifierMap, trace);
}

/** Start of the grammar */
final public Object expression() throws ParseException {
Object exp1 = null;
 exp1 = selectorExpression();
 jj_consume_token(0);
   {if (true) return exp1;}
 throw new Error("Missing return statement in function");
}

final public Object selectorExpression() throws ParseException {
Object exp1 = null;
Object exp2 = null;
 exp1 = selectorTerm();
 label_1:
 while (true) {
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case OR:
     ;
     break;
   default:
     jj_la1[0] = jj_gen;
     break label_1;
   }
   jj_consume_token(OR);
   exp2 = selectorTerm();
       exp1 = new Operator(Operator.OR, exp1, exp2);
 }
   {if (true) return exp1;}
 throw new Error("Missing return statement in function");
}

final public Object selectorTerm() throws ParseException {
Object exp1 = null;
Object exp2 = null;
 exp1 = selectorFactor();
 label_2:
 while (true) {
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case AND:
     ;
     break;
   default:
     jj_la1[1] = jj_gen;
     break label_2;
   }
   jj_consume_token(AND);
   exp2 = selectorFactor();
       exp1 = new Operator(Operator.AND, exp1, exp2);
 }
   {if (true) return exp1;}
 throw new Error("Missing return statement in function");
}

final public Object selectorFactor() throws ParseException {
Object exp1 = null;
 switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
 case TRUE:
 case FALSE:
 case LPAREN:
 case MINUS:
 case PLUS:
 case INTEGER_LITERAL:
 case FLOATING_POINT_LITERAL:
 case SIMPLE_STRING:
 case IDENTIFIER:
   exp1 = conditionalExpression();
   {if (true) return exp1;}
   break;
 case NOT:
   jj_consume_token(NOT);
   exp1 = conditionalExpression();
   exp1 = new Operator(Operator.NOT, exp1);
   {if (true) return exp1;}
   break;
 default:
   jj_la1[2] = jj_gen;
   jj_consume_token(-1);
   throw new ParseException();
 }
 throw new Error("Missing return statement in function");
}

final public Object conditionalExpression() throws ParseException {
Object exp1 = null;
 if (jj_2_1(3)) {
   jj_consume_token(LPAREN);
   exp1 = selectorExpression();
   jj_consume_token(RPAREN);
   {if (true) return exp1;}
 } else {
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case TRUE:
   case FALSE:
   case LPAREN:
   case MINUS:
   case PLUS:
   case INTEGER_LITERAL:
   case FLOATING_POINT_LITERAL:
   case SIMPLE_STRING:
   case IDENTIFIER:
     exp1 = comparisonExpression();
   {if (true) return exp1;}
     break;
   default:
     jj_la1[3] = jj_gen;
     jj_consume_token(-1);
     throw new ParseException();
   }
 }
 throw new Error("Missing return statement in function");
}

final public Object comparisonExpression() throws ParseException {
int op = -1;
Set set = null;
Object exp1 = null;
Object exp2 = null;
Object exp3 = null;
Object id = null;
Token not = null;
 if (jj_2_2(2147483647)) {
   exp1 = identifier();
   jj_consume_token(IS);
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case NOT:
     not = jj_consume_token(NOT);
     break;
   default:
     jj_la1[4] = jj_gen;
     ;
   }
   jj_consume_token(NULL);
   int opCode = not == null ? Operator.IS_NULL : Operator.IS_NOT_NULL;
   {if (true) return new Operator(opCode, exp1);}
 } else if (jj_2_3(2147483647)) {
   id = identifier();
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case NOT:
     not = jj_consume_token(NOT);
     break;
   default:
     jj_la1[5] = jj_gen;
     ;
   }
   jj_consume_token(IN);
   jj_consume_token(LPAREN);
                                              set = new HashSet();
   stringList(set);
   jj_consume_token(RPAREN);
   if (not == null)
      {if (true) return new Operator(Operator.IN, id, set);}
   else
      {if (true) return new Operator(Operator.NOT_IN, id, set);}
   {if (true) return exp1;}
 } else if (jj_2_4(2147483647)) {
   id = identifier();
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case NOT:
     not = jj_consume_token(NOT);
     break;
   default:
     jj_la1[6] = jj_gen;
     ;
   }
   jj_consume_token(LIKE);
   exp1 = patternExpression(id);
   if (not != null)
      exp1 = new Operator(Operator.NOT, exp1);
   {if (true) return exp1;}
 } else if (jj_2_5(2147483647)) {
   exp1 = stringExpression();
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case EQ:
     jj_consume_token(EQ);
         op = Operator.EQUAL;
     break;
   case NE:
     jj_consume_token(NE);
         op = Operator.DIFFERENT;
     break;
   default:
     jj_la1[7] = jj_gen;
     jj_consume_token(-1);
     throw new ParseException();
   }
   exp2 = stringExpression();
   {if (true) return new Operator(op, exp1, exp2);}
 } else if (jj_2_6(2147483647)) {
   exp1 = booleanExpression();
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case EQ:
     jj_consume_token(EQ);
         op = Operator.EQUAL;
     break;
   case NE:
     jj_consume_token(NE);
         op = Operator.DIFFERENT;
     break;
   default:
     jj_la1[8] = jj_gen;
     jj_consume_token(-1);
     throw new ParseException();
   }
   exp2 = booleanExpression();
   {if (true) return new Operator(op, exp1, exp2);}
 } else if (jj_2_7(2147483647)) {
   exp1 = arithExpression();
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case EQ:
     jj_consume_token(EQ);
         op = Operator.EQUAL;
     break;
   case NE:
     jj_consume_token(NE);
         op = Operator.DIFFERENT;
     break;
   case GT:
     jj_consume_token(GT);
         op = Operator.GT;
     break;
   case GE:
     jj_consume_token(GE);
         op = Operator.GE;
     break;
   case LT:
     jj_consume_token(LT);
         op = Operator.LT;
     break;
   case LE:
     jj_consume_token(LE);
         op = Operator.LE;
     break;
   default:
     jj_la1[9] = jj_gen;
     jj_consume_token(-1);
     throw new ParseException();
   }
   exp2 = arithExpression();
   {if (true) return new Operator(op, exp1, exp2);}
 } else if (jj_2_8(2147483647)) {
   exp1 = arithExpression();
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case NOT:
     not = jj_consume_token(NOT);
     break;
   default:
     jj_la1[10] = jj_gen;
     ;
   }
   jj_consume_token(BETWEEN);
   exp2 = arithExpression();
   jj_consume_token(AND);
   exp3 = arithExpression();
   exp1 = new Operator(Operator.BETWEEN, exp1, exp2, exp3);
   if (not != null)
      exp1 = new Operator(Operator.NOT, exp1);
   {if (true) return exp1;}
 } else {
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case TRUE:
   case FALSE:
   case IDENTIFIER:
     exp1 = booleanExpression();
   {if (true) return exp1;}
     break;
   default:
     jj_la1[11] = jj_gen;
     jj_consume_token(-1);
     throw new ParseException();
   }
 }
 throw new Error("Missing return statement in function");
}

final public void stringList(Set set) throws ParseException {
 stringToken(set);
 label_3:
 while (true) {
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case COMMA:
     ;
     break;
   default:
     jj_la1[12] = jj_gen;
     break label_3;
   }
   jj_consume_token(COMMA);
   stringToken(set);
 }
}

final public void stringToken(Set set) throws ParseException {
Token t = null;
 switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
 case SIMPLE_STRING:
   t = jj_consume_token(SIMPLE_STRING);
   break;
 default:
   jj_la1[13] = jj_gen;
   ;
 }
   if (t != null)
     set.add(stripQuotes(t.image));
}

final public Object patternExpression(Object exp1) throws ParseException {
Object exp2 = null;
Token esc = null;
Object escChar = null;
 exp2 = stringLiteral();
 switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
 case ESCAPE:
   esc = jj_consume_token(ESCAPE);
   escChar = stringLiteral();
   break;
 default:
   jj_la1[14] = jj_gen;
   ;
 }
   Operator op = null;
   if (esc == null)
      op = new Operator(Operator.LIKE, exp1, exp2);
   else
      op = new Operator(Operator.LIKE_ESCAPE, exp1, exp2, escChar);
   {if (true) return op;}
 throw new Error("Missing return statement in function");
}

final public Object arithExpression() throws ParseException {
Object exp1 = null;
Object exp2 = null;
 exp1 = arithTerm();
 label_4:
 while (true) {
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case MINUS:
   case PLUS:
     ;
     break;
   default:
     jj_la1[15] = jj_gen;
     break label_4;
   }
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case PLUS:
     jj_consume_token(PLUS);
     exp2 = arithTerm();
       exp1 = new Operator(Operator.ADD, exp1, exp2);
     break;
   case MINUS:
     jj_consume_token(MINUS);
     exp2 = arithTerm();
       exp1 = new Operator(Operator.SUB, exp1, exp2);
     break;
   default:
     jj_la1[16] = jj_gen;
     jj_consume_token(-1);
     throw new ParseException();
   }
 }
   {if (true) return exp1;}
 throw new Error("Missing return statement in function");
}

final public Object arithTerm() throws ParseException {
Object exp1 = null;
Object exp2 = null;
 exp1 = arithFactor();
 label_5:
 while (true) {
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case MULT:
   case DIV:
     ;
     break;
   default:
     jj_la1[17] = jj_gen;
     break label_5;
   }
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case MULT:
     jj_consume_token(MULT);
     exp2 = arithFactor();
       exp1 = new Operator(Operator.MUL, exp1, exp2);
     break;
   case DIV:
     jj_consume_token(DIV);
     exp2 = arithFactor();
       exp1 = new Operator(Operator.DIV, exp1, exp2);
     break;
   default:
     jj_la1[18] = jj_gen;
     jj_consume_token(-1);
     throw new ParseException();
   }
 }
   {if (true) return exp1;}
 throw new Error("Missing return statement in function");
}

final public Object arithFactor() throws ParseException {
Object exp1 = null;
boolean negate = false;
 switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
 case MINUS:
 case PLUS:
   switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
   case PLUS:
     jj_consume_token(PLUS);
     break;
   case MINUS:
     jj_consume_token(MINUS);
                 negate = true;
     break;
   default:
     jj_la1[19] = jj_gen;
     jj_consume_token(-1);
     throw new ParseException();
   }
   break;
 default:
   jj_la1[20] = jj_gen;
   ;
 }
 exp1 = numericExpression();
   if (negate)
      exp1 = new Operator(Operator.NEG, exp1);
   {if (true) return exp1;}
 throw new Error("Missing return statement in function");
}

final public Object booleanExpression() throws ParseException {
Object exp1 = null;
 switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
 case IDENTIFIER:
   exp1 = identifier();
   break;
 case TRUE:
 case FALSE:
   exp1 = booleanLiteral();
   break;
 default:
   jj_la1[21] = jj_gen;
   jj_consume_token(-1);
   throw new ParseException();
 }
   {if (true) return exp1;}
 throw new Error("Missing return statement in function");
}

final public Object booleanLiteral() throws ParseException {
boolean isTrue = true;
 switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
 case TRUE:
   jj_consume_token(TRUE);
   break;
 case FALSE:
   jj_consume_token(FALSE);
                 isTrue = false;
   break;
 default:
   jj_la1[22] = jj_gen;
   jj_consume_token(-1);
   throw new ParseException();
 }
   if (isTrue)
      {if (true) return Boolean.TRUE;}
   else
      {if (true) return Boolean.FALSE;}
 throw new Error("Missing return statement in function");
}

final public Object stringExpression() throws ParseException {
Object exp1 = null;
 switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
 case IDENTIFIER:
   exp1 = identifier();
   break;
 case SIMPLE_STRING:
   exp1 = stringLiteral();
   break;
 default:
   jj_la1[23] = jj_gen;
   jj_consume_token(-1);
   throw new ParseException();
 }
   {if (true) return exp1;}
 throw new Error("Missing return statement in function");
}

final public Object stringLiteral() throws ParseException {
Token string = null;
 string = jj_consume_token(SIMPLE_STRING);
   {if (true) return stripQuotes(string.image);}
 throw new Error("Missing return statement in function");
}

final public Object numericExpression() throws ParseException {
Object exp1 = null;
 switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
 case INTEGER_LITERAL:
 case FLOATING_POINT_LITERAL:
   exp1 = numericLiteral();
   break;
 case LPAREN:
   jj_consume_token(LPAREN);
   exp1 = arithExpression();
   jj_consume_token(RPAREN);
   break;
 case IDENTIFIER:
   exp1 = identifier();
   break;
 default:
   jj_la1[24] = jj_gen;
   jj_consume_token(-1);
   throw new ParseException();
 }
   {if (true) return exp1;}
 throw new Error("Missing return statement in function");
}

final public Object numericLiteral() throws ParseException {
Token literal = null;
 switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
 case FLOATING_POINT_LITERAL:
   literal = jj_consume_token(FLOATING_POINT_LITERAL);
   {if (true) return new Double(literal.image);}
   break;
 case INTEGER_LITERAL:
   literal = jj_consume_token(INTEGER_LITERAL);
   String number = literal.image;

   // long suffix
   if (number.endsWith(LOFFER_L) || number.endsWith(UPPER_L))
   {
      // chop off the suffix
      {if (true) return new Long(number.substring(0, number.length() - 1));}
   }

   // hex
   if (number.startsWith(OX) || number.startsWith(Ox))
   {
      // handle literals from 0x8000000000000000L to 0xffffffffffffffffL:
      // remove sign bit, parse as positive, then calculate the negative
      // value with the sign bit
      if(number.length() == 18)
      {
         byte first = Byte.decode(number.substring(0, 3)).byteValue();
         if (first >= 8)
         {
            number = Ox + (first - 8) + number.substring(3);
            {if (true) return new Long(Long.decode(number).longValue() - Long.MAX_VALUE - 1);}
         }
      }
   }
   else if (number.startsWith(ZERRO))
   {
      // octal
      // handle literals
      // from 01000000000000000000000L to 01777777777777777777777L
      // remove sign bit, parse as positive, then calculate the
      // negative value with the sign bit
      if (number.length() == 23)
      {
         if (number.charAt(1) == '1')
         {
            number = ZERRO + number.substring(2);
            {if (true) return new Long(Long.decode(number).longValue() - Long.MAX_VALUE - 1);}
         }
      }
   }
   {if (true) return Long.decode(number);}
   break;
 default:
   jj_la1[25] = jj_gen;
   jj_consume_token(-1);
   throw new ParseException();
 }
 throw new Error("Missing return statement in function");
}

final public Object identifier() throws ParseException {
Token id = null;
 id = jj_consume_token(IDENTIFIER);
   SimpleString simage = new SimpleString(id.image);
   Identifier identifier = (Identifier) identifierMap.get(simage);
   if (identifier == null)
   {
      identifier = new Identifier(simage);
      identifierMap.put(simage, identifier);
        }
   {if (true) return identifier;}
 throw new Error("Missing return statement in function");
}

final private boolean jj_2_1(int xla) {
 jj_la = xla; jj_lastpos = jj_scanpos = token;
 try { return !jj_3_1(); }
 catch(LookaheadSuccess ls) { return true; }
 finally { jj_save(0, xla); }
}
